--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-file-picker": "^0.0.6",
+    "react-horizontal-scrolling-menu": "^2.1.1",
     "react-icons": "^4.2.0",
     "react-player": "^2.9.0",
     "react-router-dom": "^5.3.0",
