--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-select": "^4.0.17",
     "axios": "^0.21.4",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -21,6 +22,7 @@
     "react-player": "^2.9.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^4.3.1",
     "react-spinners": "^0.11.0",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
